feat: get the building geojson using name